.install/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
spec:
  rules:
  - host: grafana.84.252.142.198.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.84.252.142.198.sslip.io
    secretName: grafana-ssl
