.install/ingress/postres-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgress-ingress
  namespace: default
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: postgres.84.252.143.162.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 5432
  ingressClassName: nginx
  tls:
  - hosts:
    - postgres.84.252.143.162.sslip.io
    secretName: postgress-ssl
