.install/ingress/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
spec:
  rules:
  - host: prometheus.84.252.142.198.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.84.252.142.198.sslip.io
    secretName: prometheus-ssl
