.install/ingress/simple-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: app.84.252.142.198.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 90
  ingressClassName: nginx
  tls:
  - hosts:
    - app.84.252.142.198.sslip.io
    secretName: app-ssl
